--- a/users/templates/requestor.html
+++ b/users/templates/requestor.html
@@ -42,6 +42,7 @@
                                             <th>Sector</th>
                                             <th>Cell</th>
                                             <th>Send at</th>
+                                            <th>Action</th>
                                             
                                             
                                         </tr>
@@ -58,6 +59,7 @@
                                             <td>{{request.Sector}}</td>
                                             <td>{{request.Cell}}</td>
                                             <td>{{request.send_at}}</td>
+                                            <td><button class="btn btn-primary" style="border-radius:10px">Reply</button></td>
 
                                            
                                             
