--- a/users/templates/requestor.html
+++ b/users/templates/requestor.html
@@ -52,7 +52,7 @@
                                     <tr>
                                             <td><a class="btn-link" href="#">{{request.id}}</a></td>
                                             <td>{{request.Names}}</td>
-                                            <td>{{request.Idnumber}}</td>
+                                            <td>{{request.Message}}</td>
                                             <td>{{request.phonenumber}}</td>
                                             <td>{{request.Province}}</td>
                                             <td>{{request.District}}</td>
