--- a/users/templates/tools.html
+++ b/users/templates/tools.html
@@ -6,7 +6,7 @@
                     
 					<div class="panel">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Customers</h3>
+                            <h3 class="panel-title">Tools</h3>
                         </div>
                     
                         <!--Data Table-->
