--- a/users/templates/website/cart.html
+++ b/users/templates/website/cart.html
@@ -236,7 +236,7 @@ h1,h2,h3,h4,h5,h6{
 					<div style="flex:1">
 						<p class="quantity">{{item.quantity}}</p>
 						<div class="quantity">
-							<img data-product="{{item.product.id}}" data-action="add" class="chg-quantity update-cart" src="{% static  'img/arrow-up.png' %}">
+							<img data-product="{{item.product.id}}" data-stock="{{item.product.inStock}}" data-action="add" class="chg-quantity update-cart" src="{% static  'img/arrow-up.png' %}">
 					
 							<img data-product="{{item.product.id}}" data-action="remove" class="chg-quantity update-cart" src="{% static  'img/arrow-down.png' %}">
 						</div>
@@ -341,9 +341,10 @@ h1,h2,h3,h4,h5,h6{
 for (i = 0; i < updateBtns.length; i++) {
 	updateBtns[i].addEventListener('click', function(){
 		var productId = this.dataset.product
+		var inStock = this.dataset.stock
 		var action = this.dataset.action
 		console.log('productId:', productId, 'Action:', action)
-		addCookieItem(productId, action)
+		addCookieItem(productId,inStock, action)
 		
 	})
 }
@@ -361,15 +362,20 @@ for (i = 0; i < removeBtns.length; i++) {
 	})
 }
 
-function addCookieItem(productId, action){
+function addCookieItem(productId,inStock, action){
 	console.log('User is not authenticated')
 
 	if (action == 'add'){
 		if (cart[productId] == undefined){
-		cart[productId] = {'quantity':1}
+		cart[productId] = {'quantity':1,'inStock':inStock}
 
 		}else{
+			if(cart[productId]['quantity']<parseInt(inStock)){
 			cart[productId]['quantity'] += 1
+			}
+			else{
+				alert('Only '+inStock+' are available in our stock!')
+			}
 		}
 	}
 
