--- a/users/templates/operator.html
+++ b/users/templates/operator.html
@@ -24,7 +24,7 @@
                                             <div class="col-sm-12">
                                                 <div class="form-group">
                                                     <label class="control-label">Email</label>
-                                                    <input type="email" class="form-control" name="email"> 
+                                                    <input type="email" class="form-control" name="email"/> 
                                                 </div>
                                             </div>
                                             
@@ -33,29 +33,12 @@
                                             <div class="col-sm-12">
                                                 <div class="form-group">
                                                     <label class="control-label">Phone number</label>
-                                                    <input type="number" class="form-control" name="phonenumber" placeholder="especially for mobile user"> 
+                                                    <input type="number" class="form-control" name="phonenumber" placeholder="especially for mobile user"/> 
                                                 </div>
                                             </div>
                                             
                                         </div>
-                                        <div class="row">
-                                            <div class="col-sm-12">
-                                                <div class="form-group">
-                                                    <label class="control-label">Password</label>
-                                                    <input type="password" class="form-control" name="password1"> 
-                                                </div>
-                                            </div>
-                                            
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-sm-12">
-                                                <div class="form-group">
-                                                    <label class="control-label">Confirm Password</label>
-                                                    <input type="password" class="form-control" name="password2"> 
-                                                </div>
-                                            </div>
-                                            
-                                        </div>
+                                        
                                     </div>
                                     <div class="panel-footer text-right">
                                         <button class="btn btn-block btn-success" type="submit">Submit</button>
