--- a/users/templates/website/shop.html
+++ b/users/templates/website/shop.html
@@ -9,6 +9,7 @@
 
 <head>
 {% load static %}
+{% load humanize %}
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 
     <!-- Basic Page Needs -->
@@ -277,7 +278,7 @@ h1,h2,h3,h4,h5,h6{
                                                     <h4><a href="{% url 'product' product.id %}">{{product.name}}</a></h4>
                                                    
                                                     <span class="price">
-                                                        <span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">Rwf </span>{{product.price}}</span>
+                                                        <span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">Rwf </span>{{product.price|intcomma}}</span>
                                                     </span>
                                                     <button data-product="{{product.id}}" data-stock="{{product.inStock}}" data-action="add" class="single_add_to_cart_button button alt update-cart">
                                                         Add to cart
