--- a/users/templates/dashboard.html
+++ b/users/templates/dashboard.html
@@ -9,7 +9,7 @@
 					    <div class="col-lg-10 col-lg-offset-1">
 						<div class="panel panel-body ">
 					<div class="panel-body">
-                                <h1 class="page-header text-overflow">Filter</h1>
+                                <h1 class="page-header text-overflow">Dashboard Filter</h1>
                         
                     <div class="form-field">
 						<div class="row">
@@ -124,8 +124,8 @@
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
-										<p class="text-2x mar-no text-semibold">{{subscriptions}} weekly</p>
-					                            <p class="mar-no">Total subscribers</p>
+										<p class="text-2x mar-no text-semibold">{{weekly}}</p>
+					                            <p class="mar-no">Total subscribers weekly</p>
 					                        </div>
 					                    </div>
 					                </div>
@@ -140,7 +140,7 @@
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
-					                            <p class="text-2x mar-no text-semibold">{{amount_invoiced|intcomma}} RWF</p>
+					                            <p class="text-2x mar-no text-semibold">{{amount_invoicedweekly|intcomma}} RWF</p>
 					                            <p class="mar-no">Total Amount invoiced</p>
 					                        </div>
 					                    </div>
@@ -153,7 +153,7 @@
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
-					                            <p class="text-2x mar-no text-semibold">{{amount_outstanding|intcomma}} RWF</p>
+					                            <p class="text-2x mar-no text-semibold">{{amount_outstandingweekly|intcomma}} RWF</p>
 					                            <p class="mar-no">Total Amount Outstanding </p>
 					                        </div>
 					                    </div>
@@ -171,7 +171,7 @@
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
-					                            <p class="text-2x mar-no text-semibold">{{amount_paid|intcomma}} RWF</p>
+					                            <p class="text-2x mar-no text-semibold">{{amount_paidweekly|intcomma}} RWF</p>
 					                            <p class="mar-no">Total Amount Already Paid </p>
 					                        </div>
 					                    </div>
@@ -206,8 +206,8 @@
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
-										<p class="text-2x mar-no text-semibold">{{subscriptions}} daily</p>
-					                            <p class="mar-no">Total subscribers</p>
+										<p class="text-2x mar-no text-semibold">{{daily}}</p>
+					                            <p class="mar-no">Total subscribers Daily</p>
 					                        </div>
 					                    </div>
 					                </div>
@@ -222,7 +222,7 @@
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
-					                            <p class="text-2x mar-no text-semibold">{{amount_invoiced|intcomma}} RWF</p>
+					                            <p class="text-2x mar-no text-semibold">{{amount_invoiceddaily|intcomma}} RWF</p>
 					                            <p class="mar-no">Total Amount invoiced</p>
 					                        </div>
 					                    </div>
@@ -235,7 +235,7 @@
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
-					                            <p class="text-2x mar-no text-semibold">{{amount_outstanding|intcomma}} RWF</p>
+					                            <p class="text-2x mar-no text-semibold">{{amount_outstandingdaily|intcomma}} RWF</p>
 					                            <p class="mar-no">Total Amount Outstanding </p>
 					                        </div>
 					                    </div>
@@ -253,7 +253,7 @@
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
-					                            <p class="text-2x mar-no text-semibold">{{amount_paid|intcomma}} RWF</p>
+					                            <p class="text-2x mar-no text-semibold">{{amount_paiddaily|intcomma}} RWF</p>
 					                            <p class="mar-no">Total Amount Already Paid </p>
 					                        </div>
 					                    </div>
