--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -354,7 +354,7 @@
                                         <a href="{% url 'instalment'%}">
                                             <i class="fa fa-address-card"></i>
                                             <span class="menu-title">
-                                                <strong>Now instalment</strong>
+                                                <strong>Instalment</strong>
                                                 
                                             </span>
                                         </a>
