--- a/users/templates/Installament.html
+++ b/users/templates/Installament.html
@@ -18,9 +18,11 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
+                                    <a href="{% url 'export_users_csv' %}"> <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa fa-download fa-lg" aria-hidden="true"></i>&nbsp; &nbsp;Export</button></a>
 
                                         <div class="btn-group">
                                             <div class="form-group">
+
                                         <form class="form-inline my-2 my-lg-0">
                                         <input id="demo-input-search2" type="text" name="search" placeholder="Search" class="form-control" autocomplete="off">
                                         <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
