--- a/users/templates/requestor.html
+++ b/users/templates/requestor.html
@@ -35,6 +35,7 @@
                                         <tr>
                                             <th class="text-left">ID</th>
                                             <th>Names</th>
+                                            <th>Service</th>
                                             <th>Message</th>
                                             <th>Phone Number</th>
                                             <th>Province</th>
@@ -52,6 +53,7 @@
                                     <tr>
                                             <td><a class="btn-link" href="#">{{request.id}}</a></td>
                                             <td>{{request.Names}}</td>
+                                            <td>{{request.service}}</td>
                                             <td>{{request.Message}}</td>
                                             <td>{{request.phonenumber}}</td>
                                             <td>{{request.Province}}</td>
