--- a/users/templates/requestor.html
+++ b/users/templates/requestor.html
@@ -37,11 +37,11 @@
                                             <th>Names</th>
                                             <th>Service</th>
                                             <th>Message</th>
-                                            <th>Phone Number</th>
                                             <th>Province</th>
                                             <th>District</th>
                                             <th>Sector</th>
                                             <th>Cell</th>
+                                            <th>Reply</th>
                                             <th>Send at</th>
                                             <th>Action</th>
                                             
@@ -55,15 +55,15 @@
                                             <td>{{request.Names}}</td>
                                             <td>{{request.service}}</td>
                                             <td>{{request.Message}}</td>
-                                            <td>{{request.phonenumber}}</td>
                                             <td>{{request.Province}}</td>
                                             <td>{{request.District}}</td>
                                             <td>{{request.Sector}}</td>
                                             <td>{{request.Cell}}</td>
+                                            <td>{{request.reply}}</td>
                                             <td>{{request.send_at}}</td>
                                             <td>
                                             {% if request.replied %}
-                                            <a href="{% url 'repliedmsg' request.id %}">
+                                            <a href="#">
                                             <button class="btn btn-warning" style="border-radius:10px">Replied</button>
                                             </a>
                                             {% else %}
